# example-projects

./: .clinerules  CLAUDE.md  CONTRIBUTING.md  README.md  cloudfront-data-path1.mmd  cloudfront-data-path2.mmd  draft-cf-isolation.mmd  draft-high-level-overview.mmd  draft-operator-auth.mmd  zizmor.sarif
.claude/: settings.json
goapp/: .gitignore  (+3 more)
security-response-generator/: .gitignore  README.md  pyproject.toml  setup.sh
security-response-generator/customer_standards/: README.md
security-response-generator/example_files/: README.md
security-response-generator/example_files/CA/: README.md
security-response-generator/example_files/Federal/: README.md
security-response-generator/example_files/HI/: README.md
security-response-generator/example_files/MD/: README.md
security-response-generator/example_files/PA/: README.md
security-response-generator/example_files/VA/: README.md
security-response-generator/example_files/example_private_context/: README.md  SALI-context-example.md
security-response-generator/knowledge_base/: README.md
security-response-generator/private_context/: README.md
security-response-generator/prompts/: instructions.md
security-response-generator/src/security_response_generator/: cli.py  config.py
security-response-generator/tests/: test_chunking.py  test_cli_args.py  test_formatting.py  test_loaders.py  test_manifest.py  test_ollama_client.py  test_prompt_assembly.py  test_retrieval_merge.py  test_store.py
security-response-generator/tests/fixtures/: sample_customer_standard.md  sample_nist_doc.md  sample_private_doc.md
(+46 files in other folders)
