[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "security-response-generator"
version = "0.1.0"
description = "Local RAG CLI that drafts security control responses from NIST baseline, customer standards, and private system context"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4",
    "chromadb>=0.5",
    "pypdf>=4.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
]

[project.scripts]
srg = "security_response_generator.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
